# fileTestSuite.py

./: .gitmodules  ReadMe.md  pyproject.toml  setup.cfg
fileTestSuite/: FileNamePairGen.py  __init__.py  __main__.py  template.py  unittest.py
fileTestSuite/formats/: __init__.py  binary.py  core.py  text.py
tests/: tests.py
